--- a/ShoolApp/Views/Shared/_Layout.cshtml
+++ b/ShoolApp/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Teacher", "Index", "Teacher")</li>
+                        <li>@Html.ActionLink("Classroom", "Index", "Classroom")</li>
+                        <li>@Html.ActionLink("School", "Index", "School")</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
